<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeActivity">

    <Button
    android:id="@+id/btnShowToast"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="63dp"
    android:backgroundTint="#FF5722"
    android:text="@string/btn_show_toast"/>

    <EditText
        android:id="@+id/etUserMessage"
        android:layout_width="283dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="165dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/et_enter_msg"
        android:inputType="text" />

    <Button
        android:id="@+id/btnSendMsgToNextActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:backgroundTint="#03A9F4"
        android:text="@string/btn_move_to_next_activity" />

    <Button
        android:id="@+id/btnShareToOtherApps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="167dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/btn_share_to_apps"/>

    <Button
        android:id="@+id/btnRecyclerViewDemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:backgroundTint="#FF5722"
        android:text="@string/btn_hobbies"/>
</RelativeLayout>